--- a/part5/bloglist-frontend/src/App.css
+++ b/part5/bloglist-frontend/src/App.css
@@ -8,9 +8,7 @@
 }
 
 .notification--success {
-  color: green;
-}
+  color: rgb(0, 128, 0);}
 
 .notification--error {
-  color: red;
-}
+  color: rgb(255, 0, 0);}
